--- a/css/styles.css
+++ b/css/styles.css
@@ -2,12 +2,17 @@
     margin:0px auto;
     padding:0px;
 }
+.row-heading{
+	margin:0px auto;
+    padding:0px;
+   
+}
 
 .row-content {
     margin:0px auto;
-    padding: 50px 0px 50px 0px;
+    padding: 25px 0px 50px 0px;
     border-bottom: 1px ridge;
-    min-height:400px;
+    min-height:200px;
 }
 
 .footer{
